// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipientListForm defaults to create mode 1`] = `
<div>
  <form>
    <Panel>
      <Panel.Section>
        <Stack
          space="400"
        >
          <Box
            maxWidth="45rem"
          >
            <Field
              component={[Function]}
              label="Name"
              name="name"
              placeholder="My favorite recipients"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </Box>
          <Box
            maxWidth="45rem"
          >
            <Field
              component={[Function]}
              label="ID"
              name="id"
              placeholder="my-favorite-recipients"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </Box>
          <Field
            component={[Function]}
            label="Description"
            name="description"
            placeholder="All my favorite recipients"
            validate={
              Array [
                [Function],
              ]
            }
          />
          <Field
            component={[Function]}
            fileType="csv"
            helpText={
              <span>
                You can download a
                 
                <DownloadLink
                  href="example-recipient-list.csv"
                >
                  CSV template here
                </DownloadLink>
                 
                to use when formatting your recipient list for upload.
              </span>
            }
            label="Upload a CSV file of recipients"
            name="csv"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </Stack>
        <ButtonWrapper>
          <Button
            disabled={true}
            submit={true}
            variant="primary"
          >
            Create
             Recipient List
          </Button>
        </ButtonWrapper>
      </Panel.Section>
    </Panel>
  </form>
</div>
`;

exports[`RecipientListForm renders CSV errors 1`] = `
<div>
  <Banner
    my="400"
    status="danger"
    title="CSV Format Errors"
  >
    <Error
      error="Line 73: Too many notes"
      key="0"
    />
    <Error
      error="Line 247: Vanilla is unacceptable"
      key="1"
    />
  </Banner>
  <form>
    <Panel>
      <Panel.Section>
        <Stack
          space="400"
        >
          <Box
            maxWidth="45rem"
          >
            <Field
              component={[Function]}
              label="Name"
              name="name"
              placeholder="My favorite recipients"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </Box>
          <Box
            maxWidth="45rem"
          >
            <Field
              component={[Function]}
              label="ID"
              name="id"
              placeholder="my-favorite-recipients"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </Box>
          <Field
            component={[Function]}
            label="Description"
            name="description"
            placeholder="All my favorite recipients"
            validate={
              Array [
                [Function],
              ]
            }
          />
          <Field
            component={[Function]}
            fileType="csv"
            helpText={
              <span>
                You can download a
                 
                <DownloadLink
                  href="example-recipient-list.csv"
                >
                  CSV template here
                </DownloadLink>
                 
                to use when formatting your recipient list for upload.
              </span>
            }
            label="Upload a CSV file of recipients"
            name="csv"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </Stack>
        <ButtonWrapper>
          <Button
            disabled={true}
            submit={true}
            variant="primary"
          >
            Create
             Recipient List
          </Button>
        </ButtonWrapper>
      </Panel.Section>
    </Panel>
  </form>
</div>
`;

exports[`RecipientListForm renders correctly in create mode 1`] = `
<div>
  <form>
    <Panel>
      <Panel.Section>
        <Stack
          space="400"
        >
          <Box
            maxWidth="45rem"
          >
            <Field
              component={[Function]}
              label="Name"
              name="name"
              placeholder="My favorite recipients"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </Box>
          <Box
            maxWidth="45rem"
          >
            <Field
              component={[Function]}
              label="ID"
              name="id"
              placeholder="my-favorite-recipients"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </Box>
          <Field
            component={[Function]}
            label="Description"
            name="description"
            placeholder="All my favorite recipients"
            validate={
              Array [
                [Function],
              ]
            }
          />
          <Field
            component={[Function]}
            fileType="csv"
            helpText={
              <span>
                You can download a
                 
                <DownloadLink
                  href="example-recipient-list.csv"
                >
                  CSV template here
                </DownloadLink>
                 
                to use when formatting your recipient list for upload.
              </span>
            }
            label="Upload a CSV file of recipients"
            name="csv"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </Stack>
        <ButtonWrapper>
          <Button
            disabled={true}
            submit={true}
            variant="primary"
          >
            Create
             Recipient List
          </Button>
        </ButtonWrapper>
      </Panel.Section>
    </Panel>
  </form>
</div>
`;

exports[`RecipientListForm renders correctly in edit mode 1`] = `
<div>
  <form>
    <Panel>
      <Panel.Section>
        <Stack
          space="400"
        >
          <Box
            maxWidth="45rem"
          >
            <Field
              component={[Function]}
              label="Name"
              name="name"
              placeholder="My favorite recipients"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </Box>
          <Field
            component={[Function]}
            label="Description"
            name="description"
            placeholder="All my favorite recipients"
            validate={
              Array [
                [Function],
              ]
            }
          />
          <Field
            component={[Function]}
            fileType="csv"
            helpText={
              <span>
                You can download a
                 
                <DownloadLink
                  href="example-recipient-list.csv"
                >
                  CSV template here
                </DownloadLink>
                 
                to use when formatting your recipient list for upload.
              </span>
            }
            label="Optional: Upload a CSV file of recipients to replace the existing recipients in this list"
            name="csv"
            validate={Array []}
          />
        </Stack>
        <ButtonWrapper>
          <Button
            disabled={true}
            submit={true}
            variant="primary"
          >
            Update
             Recipient List
          </Button>
        </ButtonWrapper>
      </Panel.Section>
    </Panel>
  </form>
</div>
`;

exports[`RecipientListForm should disable form elements on submit 1`] = `
<div>
  <form>
    <Panel>
      <Panel.Section>
        <Stack
          space="400"
        >
          <Box
            maxWidth="45rem"
          >
            <Field
              component={[Function]}
              disabled={true}
              label="Name"
              name="name"
              placeholder="My favorite recipients"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </Box>
          <Box
            maxWidth="45rem"
          >
            <Field
              component={[Function]}
              disabled={true}
              label="ID"
              name="id"
              placeholder="my-favorite-recipients"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
          </Box>
          <Field
            component={[Function]}
            disabled={true}
            label="Description"
            name="description"
            placeholder="All my favorite recipients"
            validate={
              Array [
                [Function],
              ]
            }
          />
          <Field
            component={[Function]}
            disabled={true}
            fileType="csv"
            helpText={
              <span>
                You can download a
                 
                <DownloadLink
                  href="example-recipient-list.csv"
                >
                  CSV template here
                </DownloadLink>
                 
                to use when formatting your recipient list for upload.
              </span>
            }
            label="Upload a CSV file of recipients"
            name="csv"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </Stack>
        <ButtonWrapper>
          <Button
            disabled={true}
            submit={true}
            variant="primary"
          >
            Create
             Recipient List
          </Button>
        </ButtonWrapper>
      </Panel.Section>
    </Panel>
  </form>
</div>
`;

exports[`RecipientListForm should throw on submit if CSV parsing fails 1`] = `[SubmissionError: Submit Validation Failed]`;
